--- a/package.json
+++ b/package.json
@@ -14,13 +14,9 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-
     "react-redux": "^8.1.1",
- 
-
-    "react-router-dom": "^6.14.0",
-    "sweetalert2": "^11.7.12"
-
+    "react-router-dom": "^6.14.1",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
